# AssertIntentParser

AssertIntentParser/: .project  AssertIntentParser.cabal
AssertIntentParser/src/: ActionElements.hs  CategoryElements.hs  ComponentsElements.hs  DataElements.hs  ExtraElements.hs  FlagElements.hs  IntentParser.hs  IntentParserWithDataStructure.hs  IntentParserWithQuickCheckForSemanticData.hs  Main.hs  TestQuick.hs  TypeElements.hs
