name:           AssertIntentParser
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         kmp

executable AssertIntentParser
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   QuickCheck >=2.6 && <2.7,
                   random >=1.0.1 && <1.1,
                   time >=1.4.2 && <1.5
  ghc-options:     -Wall
  other-modules:   
                   IntentParser,
                   Test,
                   IntentParserWithDataStructure,
                   QuickCheck,
                   IntentParserWithQuickCheckForSemanticData,
                   TestQuick

