name:           AssertIntentParser
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         kmp

executable AssertIntentParser
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   time >=1.4.2 && <1.5,
                   Cabal >=1.18.1 && <1.19,
                   checkers >=0.4.2 && <0.5,
                   QuickCheck >=2.8 && <2.9,
                   random >=1.0.1 && <1.1
  ghc-options:     -Wall
  other-modules:   
                   IntentParser,
                   Test,
                   IntentParserWithDataStructure,
                   QuickCheck,
                   IntentParserWithQuickCheckForSemanticData,
                   TestQuick,
                   ActionElements,
                   CategoryElements,
                   DataElements,
                   TypeElements,
                   ExtraElements,
                   FlagElements,
                   ComponentsElements

